# edge-test

./: Cargo.toml
dbschema/: default.esdl
dbschema/migrations/: 00002-m1fxxhd.edgeql  00003-m1pgspn.edgeql  00004-m1nrwnr.edgeql  00005-m1v27n2.edgeql  00006-m1hpuuj.edgeql  00007-m17hwxy.edgeql  00008-m1e5ycd.edgeql
src/: main.rs
