[package]
name = "edge-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edgedb-tokio = "0.5.0"
edgedb-protocol = "0.6.0"
edgedb-derive = "0.5.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
